Correct insecure http methods

--- a/config/nginx/onlyoffice.conf
+++ b/config/nginx/onlyoffice.conf
@@ -97,6 +97,8 @@ server {
 	proxy_set_header Connection $proxy_connection;
 	proxy_set_header Proxy "";
 		
+	if ($request_method !~ ^(GET|HEAD|POST)$ ) { return 444; }
+
 	set $csp "";
 	access_by_lua '
 	local accept_header = ngx.req.get_headers()["Accept"]
