--- a/install/docker/config/nginx/onlyoffice-proxy-ssl.conf
+++ b/install/docker/config/nginx/onlyoffice-proxy-ssl.conf
@@ -53,7 +53,7 @@ server {
 
 	ssl_prefer_server_ciphers   on;
 
-	add_header Strict-Transport-Security max-age=31536000;
+	add_header Strict-Transport-Security "max-age=31536000" always;
 	# add_header X-Frame-Options SAMEORIGIN;
 	add_header X-Content-Type-Options nosniff;
 
