--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -110,7 +110,7 @@ jobs:
           python-version: '3.x'
 
       - name: "Test production scripts with ${{matrix.description}}"
-        #if: ${{ github.event_name == 'schedule' }}
+        if: ${{ github.event_name == 'schedule' }}
         uses: nick-fields/retry@v2
         with:
           max_attempts: 2
@@ -134,7 +134,7 @@ jobs:
             vagrant destroy --force
 
       - name: "Test Local scripts with ${{matrix.description}}"
-        if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' }}
+        #if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' }}
         uses: nick-fields/retry@v2
         with:
           max_attempts: 2
