--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -54,9 +54,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
-    steps:          
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v2
+    steps:
 
       - name: Set matrix names
         id: set-matrix
@@ -109,8 +107,14 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Get update and install vagrant
+        run: |
+          set -eux
+          sudo apt update
+          sudo apt install vagrant virtualbox -y
+
       - name: "Test production scripts with ${{matrix.description}}"
-        if: ${{ github.event_name == 'schedule' }}
+        #if: ${{ github.event_name == 'schedule' }}
         uses: nick-fields/retry@v2
         with:
           max_attempts: 2
@@ -118,6 +122,7 @@ jobs:
           retry_on: error
           command: |
             set -eux
+            
             cd tests/vagrant
             TEST_CASE='--production-install' \
             DISTR='${{ matrix.distr }}' \
@@ -142,7 +147,7 @@ jobs:
           retry_on: error
           command: |
             set -eux
-            sudo apt update && sudo apt install vagrant virtualbox -y
+            
             cd tests/vagrant
             TEST_CASE='--local-install' \
             DISTR='${{ matrix.distr }}' \
