--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -114,7 +114,7 @@ jobs:
           sudo apt install vagrant virtualbox -y
 
       - name: "Test production scripts with ${{matrix.description}}"
-        if: ${{ github.event_name == 'schedule' }}
+        #if: ${{ github.event_name == 'schedule' }}
         uses: nick-fields/retry@v2
         with:
           max_attempts: 2
@@ -139,7 +139,7 @@ jobs:
             vagrant destroy --force
 
       - name: "Test Local scripts with ${{matrix.description}}"
-        #if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' }}
+        if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' }}
         uses: nick-fields/retry@v2
         with:
           max_attempts: 2
