--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -103,7 +103,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Python 3.
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
@@ -114,7 +114,7 @@ jobs:
           sudo apt install vagrant virtualbox -y
 
       - name: "Test production scripts with ${{matrix.description}}"
-        if: ${{ github.event_name == 'schedule' }}
+        #if: ${{ github.event_name == 'schedule' }}
         uses: nick-fields/retry@v2
         with:
           max_attempts: 2
