--- a/.github/workflows/ci-oci-install.yml
+++ b/.github/workflows/ci-oci-install.yml
@@ -122,7 +122,7 @@ jobs:
             vagrant destroy --force
 
       - name: "Test Local scripts with ${{matrix.name}}"
-        if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' }}
+        #if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' }}
         uses: nick-fields/retry@v2
         with:
           max_attempts: 2
