--- a/.github/workflows/ci-oci-install.yml
+++ b/.github/workflows/ci-oci-install.yml
@@ -1,6 +1,7 @@
 name: Install OneClickInstall DocSpace
 
 on:
+  push:
   pull_request:
     types: [opened, reopened, synchronize]
     paths:
@@ -82,7 +83,7 @@ jobs:
           sudo apt install vagrant virtualbox -y
 
       - name: "Test production scripts with ${{matrix.name}}"
-        #if: ${{ github.event_name == 'schedule' }}
+        if: ${{ github.event_name == 'schedule' }}
         uses: nick-fields/retry@v2
         with:
           max_attempts: 2
@@ -106,7 +107,7 @@ jobs:
             vagrant destroy --force
 
       - name: "Test Local scripts with ${{matrix.name}}"
-        if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' }}
+        #if: ${{ github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' }}
         uses: nick-fields/retry@v2
         with:
           max_attempts: 2
