--- a/.github/workflows/rebuild-boxes.yml
+++ b/.github/workflows/rebuild-boxes.yml
@@ -1,7 +1,7 @@
 name: Rebuild boxes
 
 on:
-  #push:
+  push:
   workflow_dispatch:
     inputs:
       centos8s:
@@ -84,8 +84,8 @@ jobs:
       - name: Rebuild boxes
         uses: nick-fields/retry@v2
         with:
-          max_attempts: 2
-          timeout_minutes: 40
+          max_attempts: 3
+          timeout_minutes: 60
           retry_on: error
           command: |
                   set -eux
