Add a step to free up hard disk space

--- a/.github/workflows/ci-oci-install.yml
+++ b/.github/workflows/ci-oci-install.yml
@@ -81,6 +81,11 @@ jobs:
           sudo apt update -y
           sudo apt install vagrant virtualbox -y
 
+      - name: Free Disk Space
+        run: |
+          sudo rm -rf /usr/local/lib/android /opt/ghc
+          sudo docker image prune --all --force
+
       - name: "Test production scripts with ${{matrix.name}}"
         if: ${{ github.event_name == 'schedule' }}
         uses: nick-fields/retry@v2
