--- a/.github/workflows/ci-oci-install.yml
+++ b/.github/workflows/ci-oci-install.yml
@@ -1,10 +1,13 @@
 name: Install OneClickInstall DocSpace
 
 on:
+  push:
   pull_request:
     types: [opened, reopened, synchronize]
     paths:
       - 'install/OneClickInstall/**'
+      - '!install/OneClickInstall/install-Docker.sh'
+      - '!install/OneClickInstall/docspace-install.sh'
 
   schedule:
     - cron: '00 20 * * 6'  # At 23:00 on Saturday.
@@ -35,6 +38,14 @@ on:
          type: boolean
          description: 'Ubuntu 22.04'
          default: true
+      fedora38:
+         type: boolean
+         description: 'Fedora 38'
+         default: true
+      fedora39:
+         type: boolean
+         description: 'Fedora 39'
+         default: true
 
 jobs:
   prepare:
@@ -53,7 +64,9 @@ jobs:
               {"execute": '${{ github.event.inputs.debian11 || true }}', "name": "Debian11", "os": "debian11", "distr": "generic"},
               {"execute": '${{ github.event.inputs.debian12 || true }}', "name": "Debian12", "os": "debian12", "distr": "generic"},
               {"execute": '${{ github.event.inputs.ubuntu2004 || true }}', "name": "Ubuntu20.04", "os": "ubuntu2004", "distr": "generic"},
-              {"execute": '${{ github.event.inputs.ubuntu2204 || true }}', "name": "Ubuntu22.04", "os": "ubuntu2204", "distr": "generic"}
+              {"execute": '${{ github.event.inputs.ubuntu2204 || true }}', "name": "Ubuntu22.04", "os": "ubuntu2204", "distr": "generic"},
+              {"execute": '${{ github.event.inputs.fedora38 || true }}', "name": "Fedora38", "os": "fedora38", "distr": "generic"},
+              {"execute": '${{ github.event.inputs.fedora39 || true }}', "name": "Fedora39", "os": "fedora39", "distr": "generic"}
             ]
           }' | jq -c '{include: [.include[] | select(.execute == true)]}')
           echo "matrix=${matrix}" >> $GITHUB_OUTPUT
@@ -91,7 +104,7 @@ jobs:
         uses: nick-fields/retry@v3
         with:
           max_attempts: 2
-          timeout_minutes: 80
+          timeout_minutes: 40
           retry_on: error
           command: |
             set -eux
@@ -115,7 +128,7 @@ jobs:
         uses: nick-fields/retry@v3
         with:
           max_attempts: 2
-          timeout_minutes: 80
+          timeout_minutes: 40
           retry_on: error
           command: |
             set -eux
