--- a/tests/vagrant/Vagrantfile
+++ b/tests/vagrant/Vagrantfile
@@ -5,8 +5,9 @@ Vagrant.configure("2") do |config|
              v.customize ["modifyvm", :id, "--memory", "#{ENV['RAM']}"] #<= total RAM.
              v.customize ["modifyvm", :id, "--cpus", "#{ENV['CPU']}"] #<= total CPU.
              v.customize ["modifyvm", :id, "--ioapic", "on"]
-             v.gui = true
     end
+
+    config.vm.boot_timeout = "1440"
 
     config.vm.define 'ubuntu'
 
