--- a/.github/workflows/ci-oci-install.yml
+++ b/.github/workflows/ci-oci-install.yml
@@ -65,8 +65,8 @@ jobs:
               {"execute": '${{ github.event.inputs.debian12 || true }}', "name": "Debian12", "os": "debian12", "distr": "generic"},
               {"execute": '${{ github.event.inputs.ubuntu2004 || true }}', "name": "Ubuntu20.04", "os": "ubuntu2004", "distr": "generic"},
               {"execute": '${{ github.event.inputs.ubuntu2204 || true }}', "name": "Ubuntu22.04", "os": "ubuntu2204", "distr": "generic"},
-              {"execute": '${{ github.event.inputs.fedora38 || true }}', "name": "Fedora38", "os": "fedora38", "distr": "generic"},
-              {"execute": '${{ github.event.inputs.fedora39 || true }}', "name": "Fedora39", "os": "fedora39", "distr": "generic"}
+              {"execute": '${{ github.event.inputs.fedora38 || true }}', "name": "Fedora38", "os": "maroskukan", "distr": "fedora38"},
+              {"execute": '${{ github.event.inputs.fedora39 || true }}', "name": "Fedora39", "os": "fedora39", "distr": "aleivag"}
             ]
           }' | jq -c '{include: [.include[] | select(.execute == true)]}')
           echo "matrix=${matrix}" >> $GITHUB_OUTPUT
